# HelloWorld

./: .gitignore  .gitmodules  CMakeLists.txt
source/: CMakeLists.txt  HelloWorld.c  HelloWorld.h  main.c
tests/: CMakeLists.txt  test-HelloWorld.c
